--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,5 @@
 {
-  "recommendations": ["ms-vscode.cpptools-extension-pack"]
+  "recommendations": [
+    "ms-vscode.cpptools-extension-pack"
+  ]
 }
